feat: memo editor and display framework
